# xinliuend

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  pyrightconfig.json  run-1xinliuend.bat  run.bat  stop.bat  to_app_plan.md
alembic/: README  env.py  script.py.mako
apidocs/: README.md  api.zh-CN.md  collections.zh-CN.md  deploy.zh-CN.md  openapi-v1.dev.json  openapi-v1.json  openapi-v2.json  plan.md  to_app_plan.md  web-dev-and-deploy.md
docs/: README.md  api.zh-CN.md  deploy.zh-CN.md  openapi-v1.json  openapi-v2.json  web-dev-and-deploy.md
scripts/: build_favicon_ico.py  build_release_bundle.sh  deploy.sh  export_openapi.py
tests/: conftest.py  test_admin_force_bind_memos_token.py  test_admin_memos_token_management.py  test_admin_security.py  test_admin_smtp_page.py  test_admin_user_devices_page.py  test_api_v2_notes_crud.py  test_attachments.py  test_auth_login_memos.py  test_auth_login_requires_token.py  test_auth_register_latest_memos.py  test_change_password.py  test_collections_api.py  test_collections_schemas.py  test_collections_service.py  test_collections_sync.py  test_cookie_auth_csrf.py  test_device_tracking_on_auth.py  test_email_binding.py  test_email_service.py  test_forgot_and_reset_password.py  test_memos_client_credentials.py  test_memos_client_latest_user_resource.py  test_memos_client_new_resource_name.py  test_memos_credential.py  test_memos_migration.py  test_memos_notes_api.py  test_memos_password_suffix.py  test_memos_sync.py  (+23 more)
(+246 files in other folders)
