[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "flow-backend"
version = "0.2.0"
description = "心流云服务后端：App 专属注册/登录 + Memos Token 交付 + 管理后台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt>=4.1.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.3",
  "psycopg2-binary>=2.9.9",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.16",
  "uvicorn[standard]>=0.27.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flow_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
